# kesh

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCKER_START.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  endpoints-audit.csv  init-demo.sh  sql-audit.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  known_failure.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-scaffold-cargo-workspace-sveltekit.md  1-10-layout-page-de-login.md  1-11-wrapper-fetch-accessibilite.md  1-12-gestion-utilisateurs-ui.md  1-2-docker-configuration.md  1-3-types-core-newtypes-validation.md  1-4-schema-de-base-repository-pattern.md  1-5-authentification-login-logout-jwt.md  1-6-refresh-token-gestion-de-session.md  1-7-gestion-des-utilisateurs-crud.md  1-8-rbac-verrouillage-optimiste.md  1-9-design-system-tokens.md  2-1-internationalisation-i18n-backend.md  2-2-flux-onboarding-chemin-a-exploration.md  2-3-flux-onboarding-chemin-b-production.md  2-4-page-accueil-navigation.md  2-5-mode-guide-expert.md  2-6-onboarding-comptes-facturation-pre-remplis.md  3-1-plan-comptable-chargement-gestion.md  3-2-saisie-ecritures-en-partie-double.md  3-3-modification-suppression-ecritures.md  3-4-recherche-pagination-tri.md  3-5-notifications-aide-contextuelle-audit.md  3-6-journaux-personnalisables.md  3-7-code-review-pass-1.md  3-7-code-review-pass-2.md  3-7-gestion-exercices-comptables.md  3-7-spec-validate-pass-1.md  3-7-spec-validate-pass-2.md  3-7-spec-validate-pass-3.md  3-7-spec-validate-pass-4.md  4-1-carnet-adresses-crud-contacts.md  4-2-conditions-paiement-catalogue-produits.md  5-1-creation-factures-brouillon.md  5-2-validation-numerotation-factures.md  5-3-generation-pdf-qr-bill.md  5-4-echeancier-factures.md  6-1-pipeline-ci-github-actions.md  6-2-code-review-pass-1.md  6-2-code-review-roadmap.md  (+26 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-01.md  implementation-readiness-report-2026-04-03.md  prd-validation-report.md  prd.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
crates/kesh-api/: Cargo.toml  README.md
crates/kesh-api/src/: config.rs  errors.rs  helpers.rs  lib.rs  main.rs
crates/kesh-api/src/auth/: bootstrap.rs  jwt.rs  mod.rs  password.rs
crates/kesh-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs
crates/kesh-api/src/routes/: accounts.rs  auth.rs  companies.rs  company_invoice_settings.rs  contacts.rs  fiscal_years.rs  health.rs  i18n.rs  invoice_pdf.rs  invoices.rs  journal_entries.rs  limits.rs  mod.rs  onboarding.rs  products.rs  profile.rs  test_endpoints.rs  users.rs  vat.rs
crates/kesh-api/tests/: auth_e2e.rs  companies_e2e.rs  fiscal_years_e2e.rs  i18n_e2e.rs  idor_multi_tenant_e2e.rs  invoice_echeancier_e2e.rs  invoice_pdf_e2e.rs  kf004_no_op_e2e.rs  onboarding_e2e.rs  onboarding_path_b_e2e.rs  profile_e2e.rs  rbac_e2e.rs  test_endpoints_e2e.rs  users_e2e.rs  vat_rates_e2e.rs
crates/kesh-api/tests/common/: mod.rs
crates/kesh-core/: Cargo.toml
crates/kesh-core/assets/charts/: association.json  independant.json  pme.json
crates/kesh-core/src/: errors.rs  invoice_format.rs  lib.rs
crates/kesh-core/src/accounting/: balance.rs  mod.rs
crates/kesh-core/src/chart_of_accounts/: mod.rs
crates/kesh-core/src/listing/: mod.rs
crates/kesh-core/src/types/: che_number.rs  iban.rs  mod.rs  money.rs  qr_iban.rs
crates/kesh-db/: Cargo.toml  README.md
crates/kesh-db/migrations/: 20260404000001_initial_schema.sql  20260405000001_auth_refresh_tokens.sql  20260406000001_refresh_tokens_revoked_reason.sql  20260409000001_onboarding_state.sql  20260410000001_bank_accounts.sql  20260411000001_accounts.sql  20260412000001_journal_entries.sql  20260413000001_audit_log.sql  20260414000001_contacts.sql  20260415000001_products.sql  20260416000001_invoices.sql  20260416000002_invoice_lines_line_total_check.sql  20260417000001_invoice_validation.sql  20260417000002_invoice_validated_journal_entry_check.sql  20260418000001_country_code.sql  20260419000001_invoice_paid_at.sql  20260419000002_users_company_id.sql  20260419000003_company_invoice_settings.sql  20260428000001_vat_rates.sql
crates/kesh-db/src/: errors.rs  lib.rs  pool.rs  test_fixtures.rs
crates/kesh-db/src/entities/: account.rs  audit_log.rs  bank_account.rs  company.rs  company_invoice_settings.rs  contact.rs  fiscal_year.rs  invoice.rs  invoice_number_sequence.rs  journal_entry.rs  mod.rs  onboarding.rs  product.rs  refresh_token.rs  user.rs  vat_rate.rs
crates/kesh-db/src/repositories/: accounts.rs  audit_log.rs  bank_accounts.rs  companies.rs  company_invoice_settings.rs  contacts.rs  fiscal_years.rs  invoice_number_sequences.rs  invoices.rs  journal_entries.rs  mod.rs  onboarding.rs  products.rs  refresh_tokens.rs  users.rs  vat_rates.rs
crates/kesh-db/tests/: bank_accounts_repository.rs  companies_repository.rs  company_invoice_settings_repository.rs  fiscal_years_repository.rs  onboarding_repository.rs  refresh_tokens_repository.rs  users_repository.rs  vat_rates_repository.rs
crates/kesh-qrbill/: Cargo.toml  README.md
crates/kesh-qrbill/src/: generator.rs  lib.rs  pdf.rs  types.rs  validation.rs
crates/kesh-qrbill/tests/: golden_test.rs
crates/kesh-seed/: Cargo.toml
crates/kesh-seed/src/: lib.rs
docs/: FRONTEND-TENANT-AUDIT.md  MULTI-TENANT-QUERY-PATTERNS.md  MULTI-TENANT-SCOPING-PATTERNS.md  TOKEN-STORAGE-SECURITY.md  change_request.md  ci.md  i18n-key-ownership-pattern.md  kesh-prd-v0.2.md  kesh-specifications.txt  known-failures.md  optimistic-locking-patterns.md  testing.md
frontend/: DEBUGGING-KF007.md  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: audit-tenant-scoping.py
(+291 files in other folders)
