[package]
name = "kesh-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
kesh-core = { path = "../kesh-core" }
kesh-db = { path = "../kesh-db" }
kesh-i18n = { path = "../kesh-i18n" }
kesh-qrbill = { path = "../kesh-qrbill" }
kesh-seed = { path = "../kesh-seed" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Story 1.5 — authentification
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.41", features = ["serde-str"] }
thiserror = "2"
unicode-normalization = "0.1"

# Story 5.4 — export CSV échéancier (BOM + séparateur ; + CRLF, RFC 4180).
csv = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal_macros = "1.40"
