[package]
name = "kesh-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.41", features = ["serde-str", "maths"] }
rust_decimal_macros = "1.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
