[package]
name = "kesh-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "migrate", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
