[package]
name = "kesh-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
kesh-core = { path = "../kesh-core" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "migrate", "chrono", "macros", "rust_decimal", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rust_decimal = { version = "1.41", features = ["serde-str", "maths"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
rust_decimal_macros = "1.40"
