[package]
name = "kesh-seed"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
kesh-core = { path = "../kesh-core" }
kesh-db = { path = "../kesh-db" }
kesh-i18n = { path = "../kesh-i18n" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
chrono = { version = "0.4" }
tracing = "0.1"
thiserror = "2"
# P7: needed for tokio::time::sleep in seed_demo retry loop. The "time" feature
# keeps this minimal — runtime is provided by sqlx (runtime-tokio-rustls).
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
